--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/reset.css" type="text/css" rel="stylesheet" />
+    <link href="css/base.css" type="text/css" rel="stylesheet" />
+    <link href="css/layouts.css" type="text/css" rel="stylesheet" />
+    <link href="css/modules.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
