--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link href="css/base.css" type="text/css" rel="stylesheet" />
     <link href="css/layouts.css" type="text/css" rel="stylesheet" />
     <link href="css/modules.css" type="text/css" rel="stylesheet" />
+    <script id="entry-template" type="text/x-handlebars-template">
+        <section id="{{keyword}}">
+            <h2>{{title}}</h2>
+            <img src={{img}} alt={{keyword}} />
+            <p>{{desc}}</p>
+        </section>
+    </script>
 </head>
 
 <body>
@@ -18,15 +25,12 @@
       </select>
     </header>
     <main>
-        <section id="photo-template">
-            <h2></h2>
-            <img src="" alt="">
-            <p></p>
-        </section>
+
     </main>
     <footer>
         &copy; 2018 Code Fellows
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js" integrity="sha256-ngJY93C4H39YbmrWhnLzSyiepRuQDVKDNCWO2iyMzFw=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
 </body>
