--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 <body>
     <header>
         <h1>The Gallery of Horns</h1>
+        <div id="pageselector">
+            <h2 id="page1">Page 1</h2>
+            <h2 id="page2">Page 2</h2>
+        </div>
         <select id="drop-down">
-        <option value="default">Filter by Keyword</option>
-      </select>
+            <option value="default">Filter by Keyword</option>
+        </select>
     </header>
     <main>
 
