--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <select id="drop-down">
             <option value="default">Filter by Keyword</option>
         </select>
+        <select id="sortDropDown">
+            <option value="default">Sort Images</option>
+            <option value="title">Alphabetical</option>
+            <option value="horns">Number of Horns</option>
+        </select>
     </header>
     <main>
 
